<?xml version="1.0"?>
<package>
  <name>rtt_actionlib_examples</name>
  <version>0.0.0</version>
  <description>The rtt_actionlib package</description>

  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>

  <url>http://ros.org/wiki/rtt_actionlib_examples</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ocl</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>messge_generation</build_depend>

  <run_depend>ocl</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_actionlib</plugin_depend>
    </rtt_ros>
  </export>
</package>
